fixed input range alignment

--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -8,6 +8,7 @@
 .time-control {
     width: 50%;
     display: flex;
+    align-items: center;
     input{
         width: 100%;
         padding: 1rem 0rem;
@@ -38,6 +39,12 @@ input[type='range']::-webkit-slider-thumb{
     height: 16px;
     width: 16px;
 }
+input[type="range"]::-moz-range-thumb{
+    -webkit-appearance: none;
+    background: transparent;
+    border: none;
+}
+
 .track{
     background: lightblue;
     width: 100%;
